[Add] :hammer: add docs

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -23,5 +23,5 @@
   "include": [
     "src"
   ],
-  "homepage": "https://poiuy4004.github.io/portfolio2"
+  "homepage": "https://poiuy4004.github.io/portfolio2/"
 }
