--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@types/react": "^18.2.60",
     "@types/react-dom": "^18.2.19",
     "@types/react-router-dom": "^5.3.3",
+    "driver.js": "^1.3.5",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-jigsaw-puzzle": "^1.0.5",
